Implementazione della MovableLabel, una label che permette di essere spostata e permette di avere uno sfondo, cancellazione dei thread per le animazioni precedentemente usati, pulizia del codice e correzione errori sonar.